--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.myskypower.net/" />
 
-    <title>Awesome Quiz App | Ali Aslan</title>
+    <title>Awesome Quiz App | Ahmed Naeem</title>
     <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
     href="mobile-screen.css"
-    media="(max-width: 800px)"
+    media="(max-width:100vw)"
   />
     <!-- FontAweome CDN Link for Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
