--- a/nozm.html
+++ b/nozm.html
@@ -24,6 +24,7 @@
 <body>
     <!-- start Quiz button -->
     <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div>
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
