--- a/adarat-antag.html
+++ b/adarat-antag.html
@@ -26,9 +26,12 @@
     <div class="start_btn"><button>ابدء الأن</button></div>
     <div><button id="myButton">الرجوع</button></div>
 
+    
+
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
         <div class="info-title"><span>بعض قواعد هذا الاختبار</span></div>
+        
         <div class="info-list">
             <div class="info">1. سيكون لديك <span>15 ثانية</span> فقط لكل سؤال.</div>
             <div class="info">2. بمجرد تحديد إجابتك ، لا يمكن التراجع عنها.</div>
@@ -87,7 +90,7 @@
     </div>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js"></script>
+    <script src="js/questions_antag.js"></script>
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script.js"></script>
