--- a/malia.html
+++ b/malia.html
@@ -21,8 +21,7 @@
     <!-- FontAweome CDN Link for Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
-<body>
-    <!-- start Quiz button -->
+<body onload="playSound()">    <!-- start Quiz button -->
     <div class="start_btn"><button>ابدء الأن</button></div>
     <div><button id="myButton">الرجوع</button></div>
 
@@ -87,7 +86,7 @@
     </div>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js"></script>
+    <script src="js/question_malia.js"></script>
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script.js"></script>
