--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <center>
     <div class="but">
     <a href="./nozm.html"><button class="st-btn">تحليل نظم</button></a>
-    <a href="./adarat-antag.html"><button class="st-btn">ادارة الانتاج</button></a>
+    <a href="./adarat-antag.html"><button class="st-btn">ادارة الانتاج والعمليات</button></a>
     <a href="./malia.html"><button class="st-btn">ادارة مالية</button></a>
     <a href="./pniaTahtya.html"><button class="st-btn">بنية التحتية</button></a>
     <a href="./mohaspa.html"><button class="st-btn">محاسبة أدارية</button></a>
