--- a/mohaspa.html
+++ b/mohaspa.html
@@ -30,7 +30,7 @@
     <div class="info_box" style="direction: rtl;">
         <div class="info-title"><span>بعض قواعد هذا الاختبار</span></div>
         <div class="info-list">
-            <div class="info">1. سيكون لديك <span>15 ثانية</span> فقط لكل سؤال.</div>
+            <div class="info">1. سيكون لديك <span>60 ثانية</span> فقط لكل سؤال.</div>
             <div class="info">2. بمجرد تحديد إجابتك ، لا يمكن التراجع عنها.</div>
             <div class="info">3. لا يمكنك تحديد أي خيار بمجرد مرور الوقت.</div>
             <div class="info">4. لا يمكنك الخروج من الاختبار أثناء اللعب.</div>
@@ -87,7 +87,7 @@
     </div>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js"></script>
+    <script src="js/question_mohaspa.js"></script>
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script.js"></script>
