--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="./malia.html"><button class="st-btn">ادارة مالية</button></a>
     <a href="./pniaTahtya.html"><button class="st-btn">بنية التحتية</button></a>
     <a href="./mohaspa.html"><button class="st-btn">محاسبة أدارية</button></a>
-    <a href="./mohaspa.html"><button class="st-btn">أنجليزي</button></a>
+    <a href="./inglish.html"><button class="st-btn">أنجليزي</button></a>
 </div>
 </center>
 </body>
