--- a/malia.html
+++ b/malia.html
@@ -24,7 +24,7 @@
 <body onload="playSound()">    <!-- start Quiz button -->
     <div class="start_btn"><button>ابدء الأن</button></div>
     <div><button id="myButton">الرجوع</button></div>
-    <div><button id="myButtonTwo">حل المسائل</button></div>
+    <div><button id="myButtonTwo">الاسئلة العملي</button></div>
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
