--- a/inglish.html
+++ b/inglish.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Quiz Box -->
-    <div class="quiz_box" dir="rtl">
+    <div class="quiz_box" dir="ltr">
         <header>
             <div class="title">تطبيق مسابقة نيمو</div>
             <div class="timer">
