--- a/msaal/malia.html
+++ b/msaal/malia.html
@@ -184,7 +184,7 @@
 (سابعا) معدل العائد علي حق الملكية = صافي الربح &divide; حقوق الملكية
             </li>
             <li>بما أن حقوق الملكية = اصول - الألتزامات</li>
-            <li>اذا حقوق الملكية 2000 000 - 750000 = 1250000</li>
+            <li>اذا حقوق الملكية 2000000 - 750000 = 1250000</li>
             <li>(250000 &divide; 1250000) &times; 100 = 20</li>
           </ul>
         </span>
@@ -211,7 +211,7 @@
             <li>
 نقطة التعادل بالقيمة = نقطة التعادل بالوحدات &times; سعر بيع الوحدة
             </li>
-          <li>1600 &times; 1600 = 8000000</li>
+          <li>1600 &times; 500 = 8000000</li>
           </ul>
         </span>
         </div>
