--- a/adarat-antag.html
+++ b/adarat-antag.html
@@ -23,8 +23,9 @@
 </head>
 <body>
     <!-- start Quiz button -->
-    <div class="start_btn"><button>ابدء الأن</button></div>
-    <div><button id="myButton">الرجوع</button></div>
+    <!-- <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div> -->
+    <div class="soon">SOON</div>
 
     
 
