--- a/inglish.html
+++ b/inglish.html
@@ -23,8 +23,11 @@
 </head>
 <body>
     <!-- start Quiz button -->
-    <div class="start_btn"><button>ابدء الأن</button></div>
-    <div><button id="myButton">الرجوع</button></div>
+    <!-- <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div> -->
+
+    <div class="soon">SOON</div>
+
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
@@ -43,7 +46,7 @@
     </div>
 
     <!-- Quiz Box -->
-    <div class="quiz_box" dir="ltr">
+    <div class="quiz_box" dir="rtl">
         <header>
             <div class="title">تطبيق مسابقة نيمو</div>
             <div class="timer">
