--- a/taminAdara.html
+++ b/taminAdara.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.myskypower.net/" />
 
-    <title>Awesome Quiz App | بنية التحتية</title>
+    <title>Awesome Quiz App | تأمين ادارة المخاطر</title>
     <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
@@ -22,12 +22,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
+
     <!-- start Quiz button -->
-    <!-- <div class="start_btn"><button>ابدء الأن</button></div>
-    <div><button id="myButton">الرجوع</button></div> -->
-
-    <div class="soon">SOON</div>
-
+    <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div>
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
@@ -90,7 +88,7 @@
     </div>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/quistion_pnya.js"></script>
+    <script src="js/taminAdara.js"></script>
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script.js"></script>
