--- a/malia.html
+++ b/malia.html
@@ -22,9 +22,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body onload="playSound()">    <!-- start Quiz button -->
-    <div class="start_btn"><button>ابدء الأن</button></div>
-    <div><button id="myButton">الرجوع</button></div>
-    <div><button id="myButtonTwo">الاسئلة العملي</button></div>
+    <!-- <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div> -->
+
+
+<div class="soon">SOON</div>
+
+
+
+
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
