--- a/mohaspa.html
+++ b/mohaspa.html
@@ -23,8 +23,11 @@
 </head>
 <body>
     <!-- start Quiz button -->
-    <div class="start_btn"><button>ابدء الأن</button></div>
-    <div><button id="myButton">الرجوع</button></div>
+    <!-- <div class="start_btn"><button>ابدء الأن</button></div>
+    <div><button id="myButton">الرجوع</button></div> -->
+
+    <div class="soon">SOON</div>
+
 
     <!-- Info Box -->
     <div class="info_box" style="direction: rtl;">
