--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   
   <center>
     <div class="but">
-    <a href="./taminAdara.html"><button class="st-btn">تأمين ادارة المخاطر</button></a>
+       <a href="./taminAdara.html"><button class="st-btn">تأمين ادارة المخاطر</button></a>
     <a href="./adarat-antag.html"><button class="st-btn">تصميم برامج الحاسب الالي</button></a>
     <a href="./malia.html"><button class="st-btn">مبادئ الاستثمار</button></a>
-    <a href="./pniaTahtya.html"><button class="st-btn">بنية التحتية</button></a>
-    <a href="./mohaspa.html"><button class="st-btn">محاسبة أدارية</button></a>
-    <a href="./inglish.html"><button class="st-btn">أنجليزي</button></a>
+    <a href="./pniaTahtya.html"><button class="st-btn">التجارة الالكترونية</button></a>
+    <a href="./mohaspa.html"><button class="st-btn">مبادئ الأقتصاد الكلي</button></a>
+
 </div>
 </center>
 </body>
