--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <center>
     <div class="but">
        <a href="./taminAdara.html"><button class="st-btn">تأمين ادارة المخاطر</button></a>
-    <a href="./adarat-antag.html"><button class="st-btn">تصميم برامج الحاسب الالي</button></a>
+   <a href="./adarat-antag.html"><button class="st-btn">تصميم الحاسب الالي</button></a>
     <a href="./malia.html"><button class="st-btn">مبادئ الاستثمار</button></a>
     <a href="./pniaTahtya.html"><button class="st-btn">التجارة الالكترونية</button></a>
     <a href="./mohaspa.html"><button class="st-btn">مبادئ الأقتصاد الكلي</button></a>
